docs: update README for v0.22.0 — fix FTS, CLI logging, 10 MCP tools
- Fix "9 tools" to "10 tools" (kcp_memory_stats is 10th, added v0.19.0)
- Add v0.20.0–v0.22.0 release entries (UsageLogger, FTS session fix, docs)
- Add CLI alias note: binary is NOT in PATH, use --enable-native-access
- Add FTS fix upgrade note: run scan --force after upgrading to v0.21.0+
- Update kcp-dashboard description to reflect v0.6.0 panels
- Bump version to 0.22.0 in pom.xml, McpServer.java, KcpMemoryCli.java

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>